k3s/manifests/n8n/service.yml
apiVersion: v1
kind: Service
metadata:
    name: n8n
    namespace: aiops
spec:
    type: NodePort
    selector:
        app: n8n
    ports:
        - name: http
          port: 5678
          targetPort: 5678
          nodePort: 30522
